[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/backgrounds/Untitled-2.png" type="Texture" id=1]
[ext_resource path="res://src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://src/Screens/YouDiedScreen.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/effects/lifeline.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/playersad.png" type="Texture" id=6]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=8]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=9]

[node name="YouDiedScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.12244
margin_bottom = -1.12244
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 9 )]
margin_left = -181.0
margin_top = 69.4543
margin_right = 216.0
margin_bottom = 120.454
align = 1

[node name="playersad" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 235.856
margin_top = -288.826
margin_right = 588.856
margin_bottom = 22.1735
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Youdied" parent="." instance=ExtResource( 9 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -294.5
margin_top = -249.5
margin_right = 303.5
margin_bottom = -184.5
custom_colors/font_color = Color( 0.121569, 0.768627, 0.784314, 1 )
text = "You Lost All Your Lifes
Watch AD For Extra 1+ Life "
align = 1

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -23.0
margin_right = 148.0
margin_bottom = 185.0
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Subscribe" parent="Menu" instance=ExtResource( 2 )]
margin_right = 296.0
margin_bottom = 53.0
text = "Subscribe"

[node name="Watch AD" type="Button" parent="Menu"]
margin_top = 57.0
margin_right = 296.0
margin_bottom = 94.0
text = "Watch AD"

[node name="Main Menu" parent="Menu" instance=ExtResource( 2 )]
margin_top = 98.0
margin_right = 296.0
margin_bottom = 151.0
text = "Main Menu"
next_scene_path = "res://src/Screens/MainScreens.tscn"

[node name="QuitButton" parent="Menu" instance=ExtResource( 7 )]
margin_top = 155.0
margin_right = 296.0
margin_bottom = 208.0

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 256.709
margin_top = 269.719
margin_right = 818.709
margin_bottom = 320.719
text = "Your final Score is %s"
align = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 8 )
rewarded_id = "ca-app-pub-5763196574658402/6956332924"
[connection signal="button_up" from="Menu/Watch AD" to="." method="_on_Watch_AD_button_up"]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
